fixed image overflow

--- a/src/styles/sevent.module.scss
+++ b/src/styles/sevent.module.scss
@@ -13,6 +13,10 @@
 
 .image {
     margin-bottom: 20px;
+
+    img {
+        width: 100%;
+    }
 }
 
 .controls {
